8/26/2007
	- 2.0.4 released
	- Update SPI code to work with java 6.
	- Fix an argument parsing bug in the dig program, where failure to
	  specify both type and class would cause the specified server to
	  be ignored.
	  (reported by Stefano Bagnara <bago75@users.sourceforge.net>)

6/12/2007
	- The SPFRecord constructors incorrectly created records whose
	  internal type field was TXT, not SPF.
	  (reported by Stefano Bagnara <bago75@users.sourceforge.net>)

3/7/2007
	- Message.getQuestion() incorrectly handled the case where the
	  question section was represented by an empty list.
	  (reported by Karl Auer <kauer@biplane.com.au>)

2/15/2007
	- Properly obey timeouts in TCPClient code when the message is
	  read in multiple chunks. (based on a patch from
	  Francesco Vivoli <fvivoli@ripe.net>)

12/4/2006
	- A cache lookup for a record would incorrectly return a delegation
	  when records for both the queried type and NS were present.
	  (reported by yosukear <y_arimoto_acare@users.sourceforge.net>)

11/28/2006
	- 2.0.3 released

11/27/2006
	- The Zone.fromXFR() method should be able to create zones
	  from AXFR-style IXFR responses.
	  (Bill Kuker <bkuker@users.sourceforge.net>)

10/25/2006
	- Make the routines that convert between the DNS and standard Java
	  representations of DSA signatures public.
	  (suggested by Klaus Malorny <Klaus.Malorny@knipp.de>)

8/3/2006
	- Add a TSIG constructor that takes an algorithm as a String.
	- Add support to TSIG.fromString() for specifying an algorithm.

7/30/2006
	- When converting a PublicKey to a DNS record, allow the algorithm
	  to be specified, as RSA keys can be either of the RSA-SHA1 or
	  RSA-MD5 algorithms (based on a patch from
	  Eric <ginipginob@users.sourceforge.net>)
	- When converting a PublicKey to a DNS record, allow the type (KEY
	  or DNSKEY) to be specified.
	- Update the DNSSECVerifier code to use DNSKEY records, not KEY
	  records.

7/30/2006